found the passwrod

--- a/foundry.toml
+++ b/foundry.toml
@@ -4,5 +4,10 @@ out = "out"
 libs = ["lib"]
 
 
+[rpc_endpoints]
+anvil = "${ANVIL_RPC_URL}"
+
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
-    
+
+
