--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,7 @@ libs = ["lib"]
 
 
 [rpc_endpoints]
-anvil = "${ANVIL_RPC_URL}"
+goerli = "${GOERLI_RPC_URL}"
 
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
